<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="actionPreferences">Settings</string>
    <string name="actionStop">Stop</string>
    <string name="app_name">Keypadmapper2</string>
    <string name="backspace">Backspace</string>
    <string name="buttonLeft">L</string>
    <string name="buttonFront">F</string>
    <string name="buttonRight">R</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonCLR">CLR</string>
    <string name="button0">0</string>
    <string name="buttonA">a</string>
    <string name="buttonB">b</string>
    <string name="buttonC">c</string>
    <string name="buttonD">d</string>
    <string name="buttonE">e</string>
    <string name="buttonF">f</string>
    <string name="buttonG">g</string>
    <string name="buttonH">h</string>
    <string name="buttonI">i</string>
    <string name="buttonJ">j</string>
    <string name="buttonK">k</string>
    <string name="buttonL">l</string>
    <string name="buttonSep1">,</string>
    <string name="buttonSep2">-</string>
    <string name="buttonSep3">/</string>
    <string name="errorFileOpen">Error writing data files</string>
    <string name="errorGpsDisabled">GPS is disabled. Please enable GPS to use this application.</string>
    <string name="errorStorageRO">The external storage is read-only. Keypadmapper needs write access for saving the data you enter.</string>
    <string name="errorStorageUnavailable">The external storage is unavailable. Keypadmapper needs to access it for saving the data you enter.</string>
    <string name="OK">OK</string>
    <string name="prefsCategoryDataTitle">Data</string>
    <string name="prefsDataPlacementDistance">Distance of the address nodes</string>
    <string name="quit">Quit</string>
    <string name="ready">Ready</string>
    <string name="systemSettings">Settings</string>
    <string name="waitForGps">Waiting for GPS</string>
    <string name="writeToNewFile">Writing to new file</string>
    <string name="Housenumber">Housenumber</string>
    <string name="Housename">Housename</string>
    <string name="Street">Street</string>
    <string name="Postcode">Postcode</string>
    <string name="City">City</string>
    <string name="Countrycode">Country code</string>
    <string name="Keypad">Keypad</string>
    <string name="AddressEditor">Address editor</string>
    <string name="FolderCreationFailed">The folder storing the data on the external storage could not be created.</string>
    <string name="satString">using %1$d/%2$d satellites</string>
    <string name="statusReadyString">Ready, accuracy %.1fm</string>

</resources>