<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2010 Nic Roets

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!--
A user wants to use the application for capturing wildlife data. Leave views related to
his requirements in comments until it's clear where his project is heading.
-->
<!-- ScrollView leaves room to expand -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/buttonGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/waitForGps"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_L"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/buttonLeft"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_F"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/buttonFront"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_R"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/buttonRight"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/button1"
                android:text="@string/button1"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/button2"
                android:text="@string/button2"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/button3"
                android:text="@string/button3"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/button4"
                android:text="@string/button4"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/button5"
                android:text="@string/button5"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/button6"
                android:text="@string/button6"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/button7"
                android:text="@string/button7"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/button8"
                android:text="@string/button8"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/button9"
                android:text="@string/button9"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_C"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/buttonCLR"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/button0"
                android:text="@string/button0"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/button_DEL"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:contentDescription="@string/backspace"
                android:src="@drawable/backspace"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/buttonA"
                android:text="@string/buttonA"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/buttonB"
                android:text="@string/buttonB"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/buttonC"
                android:text="@string/buttonC"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/buttonD"
                android:text="@string/buttonD"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/buttonE"
                android:text="@string/buttonE"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/buttonF"
                android:text="@string/buttonF"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/buttonG"
                android:text="@string/buttonG"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/buttonH"
                android:text="@string/buttonH"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/buttonI"
                android:text="@string/buttonI"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/buttonJ"
                android:text="@string/buttonJ"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/buttonK"
                android:text="@string/buttonK"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/buttonL"
                android:text="@string/buttonL"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/buttonSep1"
                android:text="@string/buttonSep1"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/buttonSep2"
                android:text="@string/buttonSep2"
                android:textSize="30sp" />

            <Button
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:tag="@string/buttonSep3"
                android:text="@string/buttonSep3"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>